@@ -406,6 +406,9 @@ Release 0.22.0 - Unreleased
     HDFS-1527. SocketOutputStream.transferToFully fails for blocks >= 2GB on
     32 bit JVM. (Patrick Kling via cos)
 
+    HDFS-1531. Clean up stack traces due to duplicate MXBean registration.
+    (Todd Lipcon via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
